[package]
name = "mockcore"
description = "Mock Bitcoin Core RPC server"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/ordinals/ord/tree/master/crates/mockcore"
repository = "https://github.com/ordinals/ord"

[dependencies]
base64 = "0.22.0"
bitcoin = { version = "0.29.1", features = ["rand", "serde"] }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
ord-bitcoincore-rpc = "0.16.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
tempfile = "3.2.0"

[patch.crates-io]
bitcoin = { git = "https://github.com/apezord/rust-dogecoin" }
ord-bitcoincore-rpc = { git = "https://github.com/apezord/rust-dogecoincore-rpc" }